Fix overlapping rows with long descriptions (#4949)

--- a/graylog2-web-interface/src/components/content-packs/ContentPackEntitiesList.css
+++ b/graylog2-web-interface/src/components/content-packs/ContentPackEntitiesList.css
@@ -10,3 +10,7 @@
     width:100%;
     table-layout:fixed;
 }
+
+:local(.bigColumns) {
+    word-wrap: break-word;
+}
